; ModuleID = '/home/carl/AnghaBench/libgit2/tests/odb/extr_loose.c_test_odb_loose__exists.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/odb/extr_loose.c_test_odb_loose__exists.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8* }

@one = common dso_local global %struct.TYPE_3__ zeroinitializer, align 8
@.str = private unnamed_addr constant [13 x i8] c"test-objects\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"8b137891\00", align 1
@.str.2 = private unnamed_addr constant [41 x i8] c"8b137891791fe96927ad78e64b0aad7bded08baa\00", align 1
@.str.3 = private unnamed_addr constant [9 x i8] c"8b13789a\00", align 1
@GIT_ENOTFOUND = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_odb_loose__exists() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = call i32 @write_object_files(%struct.TYPE_3__* @one)
  %5 = call i32 @git_odb_open(i32** %3, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  %6 = call i32 @cl_git_pass(i32 %5)
  %7 = load i8*, i8** getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @one, i32 0, i32 0), align 8
  %8 = call i32 @git_oid_fromstr(i32* %1, i8* %7)
  %9 = call i32 @cl_git_pass(i32 %8)
  %10 = load i32*, i32** %3, align 8
  %11 = call i32 @git_odb_exists(i32* %10, i32* %1)
  %12 = call i32 @cl_assert(i32 %11)
  %13 = call i32 @git_oid_fromstrp(i32* %1, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0))
  %14 = call i32 @cl_git_pass(i32 %13)
  %15 = load i32*, i32** %3, align 8
  %16 = call i32 @git_odb_exists_prefix(i32* %2, i32* %15, i32* %1, i32 8)
  %17 = call i32 @cl_git_pass(i32 %16)
  %18 = load i8*, i8** getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @one, i32 0, i32 0), align 8
  %19 = call i32 @git_oid_streq(i32* %2, i8* %18)
  %20 = call i32 @cl_assert_equal_i(i32 0, i32 %19)
  %21 = call i32 @git_oid_fromstr(i32* %1, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.2, i64 0, i64 0))
  %22 = call i32 @cl_git_pass(i32 %21)
  %23 = load i32*, i32** %3, align 8
  %24 = call i32 @git_odb_exists(i32* %23, i32* %1)
  %25 = icmp ne i32 %24, 0
  %26 = xor i1 %25, true
  %27 = zext i1 %26 to i32
  %28 = call i32 @cl_assert(i32 %27)
  %29 = call i32 @git_oid_fromstrp(i32* %1, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.3, i64 0, i64 0))
  %30 = call i32 @cl_git_pass(i32 %29)
  %31 = load i32, i32* @GIT_ENOTFOUND, align 4
  %32 = load i32*, i32** %3, align 8
  %33 = call i32 @git_odb_exists_prefix(i32* %2, i32* %32, i32* %1, i32 8)
  %34 = call i32 @cl_assert_equal_i(i32 %31, i32 %33)
  %35 = load i32*, i32** %3, align 8
  %36 = call i32 @git_odb_free(i32* %35)
  ret void
}

declare dso_local i32 @write_object_files(%struct.TYPE_3__*) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_odb_open(i32**, i8*) #1

declare dso_local i32 @git_oid_fromstr(i32*, i8*) #1

declare dso_local i32 @cl_assert(i32) #1

declare dso_local i32 @git_odb_exists(i32*, i32*) #1

declare dso_local i32 @git_oid_fromstrp(i32*, i8*) #1

declare dso_local i32 @git_odb_exists_prefix(i32*, i32*, i32*, i32) #1

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1

declare dso_local i32 @git_oid_streq(i32*, i8*) #1

declare dso_local i32 @git_odb_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
